# iam-bob-pydantic

./: .gitignore  .sops.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
000-docs/: 001-AT-DECR-greenfield-byok-pydantic-ai-decision.md  002-DR-STND-operating-rules.md
config/: mcp.yaml  policy.yaml  providers.yaml
core/: __init__.py  agent.py  governance.py  providers.py
eval/: README.md
knowledge/: README.md
surfaces/: __init__.py  cli.py  slack.py
tests/: test_scaffold.py
tools/: __init__.py  builtin.py  mcp_registry.py
